2004-12-11  Tor Lillqvist  <tml@iki.fi>

	* glib/gspawn-win32.c: Fix #157255. Also some refactoring of this
	still very ugly source file.

2004-12-09  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c (print_help): Don't print help options
	if the options of a specific group have been 
	requested.  (#160645, Glynn Foster)

2004-12-07  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (g_get_language_names): Update the returned
	value after locale changes.  (#160271, Christian Persch)
	(_g_utils_thread_init): Initialize the language name cache
	before going threaded.

	* glib/gthread.c (g_thread_init_glib): Call _g_utils_thread_init().

	* glib/gthreadinit.h: Add _g_utils_thread_init().

2004-12-06  Tor Lillqvist  <tml@iki.fi>

	* glib/giowin32.c (g_io_win32_finalize): Fix a write to freed
	memory: Unlock the channel's mutex before unrefing the channel.

2004-12-06  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Remove a no longer needed hack for 
	libtool < 1.5.2.  (#100697, Owen Taylor, Sebastian Wilhelmi)

2004-12-05  Tor Lillqvist  <tml@iki.fi>

	* glib/glib.symbols
	* glib/gwin32.[hc]: Implement DLL ABI stability also for
	g_win32_get_package_installation_directory()) and
	g_win32_get_package_installation_subdirectory().

	* glib/Makefile.am (install-libtool-import-lib): Remove the DLL
	binary compatibilty entries from the import library. They aren't
	used by newly compiled code, so no need to have them in the import
	library. (The "PRIVATE" keyword in the .def file is supposed to do
	this, but not implemented in the GNU linker yet.)

2004-12-04  Matthias Clasen  <mclasen@redhat.com>

	* glib/gqueue.c (g_queue_link_index): Return -1 if queue is 
	NULL.  (#159530, Philippe Blain)

2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

	* === Released 2.5.7 ===
	
2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Protect the the various push/pop allocator