@@ -31,7 +31,8 @@
  * what they are doing and no exchange of files with others this would
  * be a well-defined encoding, preferrably UTF-8. On Windows, the
  * pathname is always in UTF-8, even if that is not the on-disk
- * encoding or the encoding used by the Win32 API.
+ * encoding, and not the encoding accepted by the C library or Win32
+ * API.
  */
 
 int g_open      (const gchar *filename,
